--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "commander": "^11.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
     "jsdom": "^22.1.0",
     "module": "^1.2.5",
     "path": "^0.12.7",
