--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": ">=14.0.0"
   },
   "main": "dist/index.js",
+  
   "scripts": {
     "dev": "vite",
     "build": "vite build --ssr",
@@ -26,8 +27,10 @@
     "module": "^1.2.5",
     "path": "^0.12.7",
     "process": "^0.11.10",
+    "ramda": "^0.29.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
