--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bossjob-remote",
   "private": false,
-  "version": "0.0.2",
+  "version": "0.0.2-fix1",
   "type": "module",
   "engines": {
     "node": ">=14.0.0"
