--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "commander": "^11.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "helmet": "^7.0.0",
     "http-proxy-middleware": "^2.0.6",
     "jsdom": "^22.1.0",
     "module": "^1.2.5",
